--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "mapnik": "~1.4.2",
     "geojsonhint": "~0.3.1",
-    "sphericalmercator": "~1.0.2"
+    "sphericalmercator": "~1.0.2",
+    "geojson-normalize": "0.0.0"
   }
 }
