--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-overlay",
   "devDependencies": {
-    "tap": "~0.4.8",
-    "concat-stream": "~1.4.5"
+    "tap": "~0.4.8"
   },
   "dependencies": {
     "mapnik": "~1.4.2",
