--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-overlay",
   "devDependencies": {
-    "tap": "~0.4.8"
+    "tap": "~0.4.8",
+    "benchmark": "~1.0.0"
   },
   "dependencies": {
     "mapnik": "~1.4.2",
