--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/mapbox/tilelive-overlay",
   "devDependencies": {
     "tap": "~0.4.8",
+    "queue-async": "~1.0.7",
     "benchmark": "~1.0.0"
   },
   "dependencies": {
