--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "benchmark": "~1.0.0"
   },
   "dependencies": {
-    "mapnik": "~1.4.2",
+    "mapnik": "~1.4.10",
     "sphericalmercator": "~1.0.2",
     "blend": "~0.10.1",
     "agentkeepalive": "~0.2.2",
     "lru-cache": "~2.5.0",
     "xtend": "~3.0.0",
-    "geojson-mapnikify": "0.0.5",
+    "geojson-mapnikify": "~0.0.6",
     "request": "~2.34.0",
     "geojsonhint": "~0.3.1"
   }
