pin version a little closer

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "benchmark": "~1.0.0"
   },
   "dependencies": {
-    "mapnik": "https://github.com/mapnik/node-mapnik/tarball/mapnik3",
+    "mapnik": "git://github.com/mapnik/node-mapnik.git#b452794b578537ce2cf03c01d28d35e0396a914d",
     "sphericalmercator": "~1.0.2",
     "geojson-mapnikify": "0.1.0"
   }
