--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "dependencies": {
     "sphericalmercator": "~1.0.2",
-    "geojson-mapnikify": "0.3.1"
+    "geojson-mapnikify": "0.4.x"
   }
 }
