--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tilelive-overlay",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "use geojson and simplestyle features rendered with mapnik",
   "main": "index.js",
   "scripts": {
@@ -24,12 +24,12 @@
   "homepage": "https://github.com/mapbox/tilelive-overlay",
   "devDependencies": {
     "tap": "~0.4.8",
-    "mapnik": "3.2.x",
+    "mapnik": "~3.4.3",
     "queue-async": "~1.0.7",
     "benchmark": "~1.0.0"
   },
   "dependencies": {
     "sphericalmercator": "~1.0.2",
-    "geojson-mapnikify": "~0.5.0"
+    "geojson-mapnikify": "~0.6.0"
   }
 }
