--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,21 @@
 language: node_js
+
+sudo: false
+
 node_js:
-  - 0.10
+  - "0.10"
+  - "0.12"
+
+addons:
+  apt:
+    sources:
+     - ubuntu-toolchain-r-test
+    packages:
+     - libstdc++6 # upgrade libstdc++ on linux to support C++11
+
 install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -y
-  - sudo apt-get install -y libstdc++6
   - npm install
+
 script:
   - npm test
   - node benchmark/bench.js
