--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tilelive-overlay",
+  "name": "@mapbox/tilelive-overlay",
   "version": "0.7.1",
   "description": "use geojson and simplestyle features rendered with mapnik",
   "main": "index.js",
