--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/mapbox/tilelive-overlay",
   "devDependencies": {
     "tap": "~0.4.8",
-    "mapnik": "~3.7.0",
+    "mapnik": "3.x || 4.x",
     "queue-async": "~1.0.7",
     "benchmark": "~1.0.0"
   },
