--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "dependencies": {
     "@mapbox/sphericalmercator": "~1.0.2",
-    "@mapbox/geojson-mapnikify": "~1.0.0"
+    "@mapbox/geojson-mapnikify": "https://github.com/mapbox/geojson-mapnikify/tarball/mapnik-4"
   }
 }
