--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "tap": "~0.4.8"
   },
   "dependencies": {
-    "@mapbox/geojson-mapnikify": "^3.0.1",
+    "@mapbox/geojson-mapnikify": "^3.0.2-dev",
     "@mapbox/sphericalmercator": "^1.1.0"
   }
 }
